scaffold/typescript-go-main/testdata/baselines/reference/submodule/conformance/moduleExportPropertyAssignmentDefault.errors.txt
axios.js(2,1): error TS2309: An export assignment cannot be used in a module with other exported elements.


==== axios.js (1 errors) ====
    var axios = {}
    module.exports = axios // both assignments should be ok
    ~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2309: An export assignment cannot be used in a module with other exported elements.
    module.exports.default = axios
    